[gd_scene load_steps=2 format=3 uid="uid://bq823rde85ow7"]

[ext_resource type="Script" uid="uid://b7pijc4icfgcj" path="res://scripts/MultiplayerControllers.gd" id="1_qyuap"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qyuap")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 14.0
offset_right = 151.0
offset_bottom = 46.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 185.0
offset_top = 14.0
offset_right = 299.0
offset_bottom = 46.0
text = "Join"

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 335.0
offset_top = 14.0
offset_right = 449.0
offset_bottom = 46.0
text = "Start Game"

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 186.0
offset_top = 88.0
offset_right = 398.0
offset_bottom = 123.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 117.0
offset_top = 87.0
offset_right = 185.0
offset_bottom = 120.0
text = "IP Addr:"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="StartGame" to="." method="_on_start_game_button_down"]
